add umbrella posts

--- a/blog/tensor_calculus/index.mdx
+++ b/blog/tensor_calculus/index.mdx
@@ -9,3 +9,7 @@ hero_image_credit_link: ""
 ---
 
 Tensor calculus is key to both AI and quantum computing. Numpy is an efficient library for tensor calculus. 
+
+- Tensor calculus basics
+- Numpy basics
+- Textbooks
